<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">华庆百胜</string>
    <string name="uid">请输入账号</string>
    <string name="upwd">请输入密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="signup">注&#160;&#160;&#160;&#160;册</string>
    <string name="confirm">确&#160;&#160;&#160;&#160;认</string>
    <string name="tip_success">成功</string>
    <string name="signup_success">注册成功</string>
    <string name="tip_fail">失败</string>
    <string name="wait">稍等..</string>
    <string name="doing">加载..</string>
    <string name="done">完成</string>
    <string name="searchinfo">请输入搜索信息</string>
    <string name="delete">删除</string>
    <string name="map">地图</string>
    <string name="ok">确认</string>
    <string name="know">知道</string>
    <string name="no">取消</string>
    <string name="error_login">登录信息不正确</string>
    <string name="submit">提交</string>
    <string name="add_signup">新增注册信息</string>
    <string name="exit">退出</string>
    <string name="tel">用户电话</string>
    <string name="name">用户姓名</string>
    <string name="pwd">用户密码</string>
    <string name="ukind">用户身份</string>
    <string name="carnumber">车辆编号</string>
    <string name="nodeaddress">站点地址</string>
    <string name="input">请输入</string>
    <string name="locate">定&#160;&#160;位</string>
    <string name="detail">详&#160;&#160;情</string>
    <string name="driver">司机姓名</string>
    <string name="ownner">所属站点</string>
    <string name="model">电池名称</string>
    <string name="price">电池单价</string>
    <string name="brand">电池品牌</string>
    <string name="count">电池件数</string>
    <string name="goal">目的地址</string>
    <string name="dealine">截止日期</string>
    <string name="state">商品状态</string>
    <string name="sign">签&#160;&#160;收</string>
    <string name="photo">&#160;&#160;&#160;&#160;+&#160;&#160;&#160;&#160;</string>
    <string name="zero">&#160;&#160;&#160;&#160;0&#160;&#160;&#160;&#160;</string>
    <string name="action_add">新&#160;&#160;增</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="bargain">议价</string>
    <string name="up">升</string>
    <string name="down">降</string>
    <string name="complete_photo">照相完成</string>
    <string name="error_sdcard">SD卡故障</string>
    <string name="error_input">输入有误</string>
    <string name="error_createimage">创建图片失败</string>
    <string name="error_writepad">建写字板失败</string>
    <string name="success_writepad">签字完成</string>
    <string name="collection_image">图片集合</string>
    <string name="show_image">图片显示</string>
    <string name="confirm_info">确认信息</string>
    <string name="bargain_info">议价详情</string>
    <string name="sended">已经发送</string>
    <string name="sendfail">发送失败</string>
	<!-- 新內容 -->
	<string name="input_name">请输入姓名</string>
	<string name="input_pwd">请输入密码</string>
	<string name="input_confirm_pwd">请确认密码</string>
	<string name="input_phone">请输入电话</string>
	<string name="input_role">请选择身份</string>
	<string name="input_carnumber">请输入车牌</string>
	<string name="input_location">请输入地址</string>
	<string name="choose_driver">回收员</string>
	<string name="choose_photo">拍照</string>
	<string name="choose_photoset">相册</string>
	<string name="choose_back">取消</string>
	<string name="choose_node">回收点</string>
	<string name="choose_common">用户</string>
	<string name="locate_finished">定位完成</string>
	<string name="input_collection_id">请输入回收单号</string>
	<string name="input_driver_name">请输入回收员姓名</string>
	<string name="confirm_submit">确认提交</string>
	<string name="choose_left">回收单</string>
	<string name="choose_middle">回收员</string>
	<string name="choose_right">新电池</string>
	<string name="oper_del">取消</string>
	<string name="topic_deliver_add">回收单新增</string>
	<string name="topic_driver_add">回收员新增</string>
	<string name="topic_battery_add">电池新增</string>
	<string name="topic_delivery_add_name">回收员</string>
	<string name="topic_sign_order">订单号</string>
	<string name="topic_delivery_add_goal">&#160;地&#160;&#160;址&#160;</string>
	<string name="topic_delivery_add_deadline">&#160;日&#160;&#160;期&#160;</string>
	<string name="topic_delivery_add_count">&#160;数&#160;&#160;量&#160;</string>
	<string name="topic_delivery_add_price">&#160;价&#160;&#160;格&#160;</string>
	<string name="topic_delivery_add_model">&#160;类&#160;&#160;型&#160;</string>
	<string name="input_info">请输入信息</string>
	<string name="topic_sign_date">日期</string>
	<string name="topic_sign_goal">地址</string>
	<string name="topic_sign_status">状态</string>
	<string name="topic_sign">签收</string>
	<string name="topic_history">历史详情</string>
	<string name="btn_sign_good">正常</string>
	<string name="btn_sign_bad">异常</string>
	<string name="input_info2">输入</string>
	<string name="input_complete">请填写完整</string>
	<string name="btn_add">+</string>
</resources>