<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_bg_n" >

    <LinearLayout
        android:id="@+id/laybottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/btnphoto"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvphoto"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_photo" />
        </RelativeLayout>

        <View
            android:id="@+id/v2"
            style="@style/common_horizontal_division_line2_style" />

        <RelativeLayout
            android:id="@+id/btnphotoset"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvphotoset"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_photoset" />
        </RelativeLayout>

        <View
            android:id="@+id/v3"
            style="@style/common_horizontal_division_line2_style" />

        <RelativeLayout
            android:id="@+id/btnback"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvback"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_back" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>