<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_bg_n" >

    <RelativeLayout
        android:id="@+id/laytop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_change_n"
            android:clickable="true"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/ivback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/v1"
        style="@style/common_horizontal_division_line_style"
        android:layout_below="@id/laytop" />

    <LinearLayout
        android:id="@+id/laybottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/v1"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/btndriver"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvdriver"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_driver" />
        </RelativeLayout>

        <View
            android:id="@+id/v2"
            style="@style/common_horizontal_division_line2_style" />

        <RelativeLayout
            android:id="@+id/btnnode"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvnode"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_node" />
        </RelativeLayout>

        <View
            android:id="@+id/v3"
            style="@style/common_horizontal_division_line2_style" />

        <RelativeLayout
            android:id="@+id/btncommon"
            style="@style/signup_chooserole_n" >

            <TextView
                android:id="@+id/tvcommon"
                style="@style/signup_choosecontent_n"
                android:layout_centerInParent="true"
                android:text="@string/choose_common" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>